# kantyna_laser

./: Cargo.toml  readme.md  todo.md
common/: Cargo.toml
common/src/: lib.rs
service/: Cargo.toml  chuj.py
service/hooks/: note_down_to_textfile.sh  run_mpv.py
service/src/: consts.rs  hook_runner.rs  main.rs  music_queue.rs  song.rs  util.rs
website/: Cargo.toml  Makefile.toml  index.html
website/src/: lib.rs  main.rs
website2/: Cargo.toml  Makefile.toml
website2/src/: lib.rs
