[package]
name = "service"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "*"
actix-files = "*"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
common = { path = "../common" }
lazy_static = "1"
async-trait = "0.1"
futures-util = "0.3"
regex = "1"
