[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = "*"
gloo-console = "0.2"
gloo-net = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
wasm-bindgen-futures = "0.4"