[package]
name = "website2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
# web-sys = "*"
# gloo-console = "0.2"
# gloo-net = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.60"
common = { path = "../common" }
seed = "0.9"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
